--- a/index.html
+++ b/index.html
@@ -1,39 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>URL Shortener</title>
-</head>
-<body>
-    <h1>URL Shortener</h1>
-    <form id="shortenForm">
-        <label for="url">URL:</label><br>
-        <input type="text" id="url" name="url" required><br><br>
-        <button type="submit">Shorten</button>
-    </form>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+  </head>
+  <style>
+    @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+    body,
+    html {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+    }
+    body {
+      display: flex;
+      justify-content: center;
+      font-family: "Poppins", sans-serif;
+      background-color: #0075a2;
+    }
 
-    <div id="shortenedUrl"></div>
+    h1,
+    label {
+      color: white;
+    }
 
+    label {
+      font-size: 25px;
+    }
+
+    #shortenedUrl {
+      margin: 1rem;
+      color: white;
+    }
+
+    #shortenedUrl a {
+        color: #b5e2fa;
+    }
+
+  </style>
+  <body>
+    <div class="content d-flex justify-content-center flex-column text-center">
+      <div class="box">
+        <h1>URL Shortener</h1>
+        <form id="shortenForm">
+          <label for="url">URL:</label><br />
+          <input type="text" id="url" name="url" required /><br /><br />
+          <button class="btn btn-light" type="submit">Shorten</button>
+        </form>
+
+        <div id="shortenedUrl"></div>
+      </div>
+    </div>
     <script>
-        document.getElementById('shortenForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-            var formData = new FormData(this);
+      document
+        .getElementById("shortenForm")
+        .addEventListener("submit", function (event) {
+          event.preventDefault();
+          var formData = new FormData(this);
 
-            fetch('/shorten', {
-                method: 'POST',
-                body: JSON.stringify({ "url": formData.get('url') }),
-                headers: {
-                    'Content-Type': 'application/json'
-                }
+          fetch("/shorten", {
+            method: "POST",
+            body: JSON.stringify({ url: formData.get("url") }),
+            headers: {
+              "Content-Type": "application/json",
+            },
+          })
+            .then((response) => response.json())
+            .then((data) => {
+              var shortenedUrl = "http://" + data.shortened_url;
+              document.getElementById(
+                "shortenedUrl"
+              ).innerHTML = `Shortened URL: <a href="${shortenedUrl}" target="_blank" >${shortenedUrl}</a>`;
             })
-            .then(response => response.json())
-            .then(data => {
-                var shortenedUrl = 'http://' + data.shortened_url;
-                document.getElementById('shortenedUrl').innerHTML = `Shortened URL: <a href="${shortenedUrl}">${shortenedUrl}</a>`;
-            })
-            .catch(error => console.error('Error:', error));
+            .catch((error) => console.error("Error:", error));
         });
     </script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
