--- a/index.html
+++ b/index.html
@@ -1,92 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>URL Shortener</title>
+<head>
+    <meta charset="UTF-8"> <!-- Define o conjunto de caracteres como UTF-8 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Configura a viewport para responsividade -->
+    <title>URL Shortener</title> <!-- Título da página -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+        rel="stylesheet" <!-- Importa o CSS do Bootstrap para estilos pré-definidos -->
     />
-  </head>
-  <style>
-    @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-    body,
-    html {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      height: 100%;
+</head>
+<style>
+    /* Estilos CSS para a página */
+    body, html {
+        margin: 0; /* Remove margens */
+        padding: 0; /* Remove preenchimentos */
+        width: 100%; /* Define a largura como 100% */
+        height: 100%; /* Define a altura como 100% */
+        display: flex; /* Utiliza flexbox para o layout */
+        justify-content: center; /* Centraliza horizontalmente */
+        align-items: center; /* Centraliza verticalmente */
+        font-family: "Poppins", sans-serif; /* Define a fonte */
+        background-color: #0075a2; /* Define a cor de fundo */
     }
-    body {
-      display: flex;
-      justify-content: center;
-      font-family: "Poppins", sans-serif;
-      background-color: #0075a2;
+    .content {
+        text-align: center; /* Centraliza o texto */
+        color: white; /* Define a cor do texto */
     }
-
-    h1,
-    label {
-      color: white;
-    }
-
-    label {
-      font-size: 25px;
-    }
-
     #shortenedUrl {
-      margin: 1rem;
-      color: white;
+        margin-top: 1rem; /* Margem superior */
+        color: white; /* Define a cor do texto */
     }
-
     #shortenedUrl a {
-        color: #b5e2fa;
+        color: #b5e2fa; /* Define a cor dos links */
     }
-
-  </style>
-  <body>
-    <div class="content d-flex justify-content-center flex-column text-center">
-      <div class="box">
-        <h1>URL Shortener</h1>
-        <form id="shortenForm">
-          <label for="url">URL:</label><br />
-          <input type="text" id="url" name="url" required /><br /><br />
-          <button class="btn btn-light" type="submit">Shorten</button>
-        </form>
-
-        <div id="shortenedUrl"></div>
-      </div>
-    </div>
-    <script>
-      document
-        .getElementById("shortenForm")
-        .addEventListener("submit", function (event) {
-          event.preventDefault();
-          var formData = new FormData(this);
-
-          fetch("/shorten", {
+</style>
+<body>
+<div class="content">
+    <h1>URL Shortener</h1> <!-- Título principal da página -->
+    <form id="shortenForm"> <!-- Formulário para entrada de URL -->
+        <div class="mb-3">
+            <label for="url" class="form-label">Enter URL:</label> <!-- Rótulo do campo de entrada -->
+            <input type="text" id="url" name="url" class="form-control" required /> <!-- Campo de entrada de texto -->
+        </div>
+        <button class="btn btn-light" type="submit">Shorten</button> <!-- Botão para enviar o formulário -->
+    </form>
+    <div id="shortenedUrl"></div> <!-- Div para exibir a URL encurtada -->
+</div>
+<script>
+    // Adiciona um ouvinte de evento ao formulário para a submissão
+    document.getElementById("shortenForm").addEventListener("submit", function (event) {
+        event.preventDefault(); // Previne o comportamento padrão de submissão do formulário
+        var formData = new FormData(this); // Cria um objeto FormData a partir do formulário
+        // Faz uma requisição POST para encurtar a URL
+        fetch("http://127.0.0.1:8080/shorten", {
             method: "POST",
-            body: JSON.stringify({ url: formData.get("url") }),
-            headers: {
-              "Content-Type": "application/json",
-            },
-          })
-            .then((response) => response.json())
-            .then((data) => {
-              var shortenedUrl = "http://" + data.shortened_url;
-              document.getElementById(
-                "shortenedUrl"
-              ).innerHTML = `Shortened URL: <a href="${shortenedUrl}" target="_blank" >${shortenedUrl}</a>`;
-            })
-            .catch((error) => console.error("Error:", error));
-        });
-    </script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+            body: JSON.stringify({ url: formData.get("url") }), // Envia a URL como um JSON
+            headers: { "Content-Type": "application/json" }, // Define o cabeçalho como JSON
+        })
+        .then(response => {
+            // Verifica se a resposta da rede foi bem-sucedida
+            if (!response.ok) {
+                throw new Error('Network response was not ok');
+            }
+            return response.json(); // Converte a resposta em JSON
+        })
+        .then(data => {
+            var shortenedUrl = data.shortened_url; // Obtém a URL encurtada da resposta
+            // Atualiza o conteúdo da div para exibir a URL encurtada
+            document.getElementById("shortenedUrl").innerHTML = `
+                Shortened URL: <a href="${shortenedUrl}" target="_blank">${shortenedUrl}</a>
+            `;
+        })
+        .catch(error => console.error("Error:", error)); // Loga erros no console
+    });
+</script>
+<script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+></script> <!-- Importa o script do Bootstrap para funcionalidades JavaScript -->
+</body>
 </html>
